--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 
 		<link rel="apple-touch-icon" href="{{ site.baseurl }}/apple-touch-icon.png">
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/touch-icon.png" sizes="192x192">
-		<link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicon.png">
+		<link rel="icon" type="image/png" href="http://res.cloudinary.com/jenslaufer/image/upload/c_scale,w_56/v1526560725/logo_symbol.png">
 
 		{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
 			<script>
@@ -26,7 +26,7 @@
 	<body>
 		<header>
 			<div class="container">
-				<h1 class="company-name">bnbdata.co</h1>
+				<h1 class="company-name"><a href="{{ site.baseurl }}/"><img src="http://res.cloudinary.com/jenslaufer/image/upload/c_scale,w_350/v1526564648/Logo__blac_white.png" alt="Urban" width="350"></a></h1>
 				{% include navigation.html %}
 			</div>
 		</header>
