--- a/_includes/staff-member.html
+++ b/_includes/staff-member.html
@@ -1,4 +1,4 @@
-<a target="_blank" href="https://twitter.com/{{ include.member.twitter }}">
+<a target="_blank" href="{{ include.member.external_url }}">
 	<div class="square-image"><img src="{% include relative-src.html src=include.member.image_path %}" alt="{{ include.member.name }}"/></div>
 	<div class="details">
 		<div class="name">{{ include.member.name }}</div>
