--- a/css/screen.scss
+++ b/css/screen.scss
@@ -4,9 +4,10 @@
 $pattern: "{{ site.baseurl }}/images/pattern.png";
 $screenshot-buttons: "{{ site.baseurl }}/images/screenshot-buttons.svg";
 
+
 $brand-color: #fd5c63;
 $html-background-color: #222;
-$secondary-brand-color: #FFC461;
+$secondary-brand-color: #f7797a;
 $middle-gradient-color: mix($brand-color, $secondary-brand-color, 95%);
 
 // Breakpoints
