--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,9 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		{% if page.is_post %}
+		<link rel="author" href="https://plus.google.com/102648200828227284185/posts" />
+		{% endif %}
 
 		{% seo %}
 		{% feed_meta %}
@@ -13,6 +16,7 @@
 		<link rel="apple-touch-icon" href="{{ site.baseurl }}/apple-touch-icon.png">
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/touch-icon.png" sizes="192x192">
 		<link rel="icon" type="image/png" href="http://res.cloudinary.com/jenslaufer/image/upload/c_scale,w_56/v1526560725/logo_symbol2.png">
+
 
 		{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
 			<script>
@@ -40,7 +44,7 @@
 					{% for column in site.data.footer %}
 						<ul class="footer-links">
 							<li>
-								<h2>{{ column.title }}</h2>
+								<h4>{{ column.title }}</h2>
 							</li>
 							{% for link in column.links %}
 								<li>
