--- a/_layouts/products.html
+++ b/_layouts/products.html
@@ -1,13 +1,8 @@
 ---
-layout: default
+layout: archive
 ---
 
 <h1>Our Products</h1>
-<ul>
-    {% for product in site.pages %}
-    <li>
-        <h2><a href="{{ product.url }}">{{ product.title }}</a></h2>
-        <p>{{ product.excerpt }}</p>
-    </li>
-    {% endfor %}
-</ul>
+{% for product in site.products %}
+<h2><a href="{{ product.url }}">{{ product.title }}</a></h2>
+{% endfor %}
