--- a/_sass/minimal-mistakes/_product.scss
+++ b/_sass/minimal-mistakes/_product.scss
@@ -9,7 +9,7 @@
     font-size: 1.3em;
 }
 
-#benefit-overview p{
+#benefit-overview>p{
     margin-top: 1.5em;
     margin-bottom: 0.8em;
     text-align: center;
@@ -38,9 +38,10 @@
 }
 
 .cta-form>p {
-    margin-top: 0;
+    margin-top: 0.5em;
     font-size: 0.8em;
     font-style: italic;
+    font-weight: 650;
 }
 
 
